[package]
name = "rcon"
version = "0.1.0"
edition = "2021"
authors = ["tukeJonny <ne250143@yahoo.co.jp>]
description = "Rust implementation of SRCDS RCON Protocol"
repository = "https://github.com/tukeJonny/rcon-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
bytes = "1"
num-traits = "0.2"
num-derive = "0.4"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }

[badges]
github = { repository = "tukeJonny/rcon-rs", workflow = "Test" }